fix: lessons on mobile not being very visible (2/2)

--- a/public/style.css
+++ b/public/style.css
@@ -127,7 +127,6 @@ form, select{
 .lesson-cell {
     padding: 0.25rem;
     border-radius: 0.25rem;
-    min-height: 20px;
 }
 
 /* =========== DOWNLOAD BUTTON =========== */
@@ -183,5 +182,6 @@ form, select{
 
     .lesson-cell {
         width: 100%;
+        min-height: 38px;
     }
 }
